--- a/css/style.css
+++ b/css/style.css
@@ -122,92 +122,90 @@ img {
 }
 
 .colton {
-    height: 200px;
+    height: 100%;
 }
 
 .irene {
-    height: 200px;
+    height: 100%;
     margin-top: 20px;
 }
 
 .anne {
-    height: 200px;
+    height: 100%;
     margin-top: 40px;
 }
 
 @media screen and (max-width: 791px) {
     
     body {
-        font-size: 10px;
-        width: 20rem;
-        border: 1px solid red;
+        font-size: 70%;
+        width: 100%;
     }
 
     .ads-ratings {
-        width: 20rem;
-        border: 1px solid red;
+        width: 100%;
         
         display: flex;
         flex-direction: column;
     }
 
     .ads {
-        width: 18rem;
+        width: 100%;
         text-align: center;
     }
 
     .ads > h2 {
-        width: 18rem;
+        width: 100%;
         margin: 1rem;
     }
     
     .ads > p {
-        width: 20rem;
+        width: 100%;
+    }
+
+    .ratings {
+        width: 100%;
     }
 
     .rating-1 {
+        width: 100%;
         padding: 2rem;
-        width: 18rem;
+        margin: 2rem 0;
     }
     
     .rating-2 {
-        width: 18rem;
-        margin-left: 0px;
+        width: 100%;
+        margin: 2rem 0;
         padding: 2rem;
     }
     
     .rating-3 {
-        width: 18rem;
+        width: 100%;
         padding: 2rem;
-        margin-left: 0px;
-        margin-bottom: 1rem;
+        margin: 2rem 0;
     }
 
     .review-cards {
-        width: 20rem;
+        width: 100%;
         padding: 0;
-        border: 1px solid blue;
         flex-direction: column;
     }
 
     .colton {
-        width: 18rem;
-        height: 10rem;
-        margin-top: 1rem;
+        height: 100%;
+        width: 100%;
     }
     
     .irene {
-        width: 18rem;
-        height: 10rem;
-        margin-top: 1rem;
+        width: 100%;
+        height: 100%;
+        margin-top: 0rem;
     }
     
     .anne {
-        margin-top: 1rem;
-        width: 18rem;
-        height: 10rem;
-        justify-content: center;
-        align-items: center;
+        margin-top: 0rem;
+        width: 100%;
+        height: 100%;
     }
 
 }
